AI Refactor for testing_automation-full_stack_E2E_code/backend/src/main/java/com/auth/config/SecurityConfig.java:
Changes:
- Replaced deprecated method `requestMatchers` with `antMatchers` for better compatibility with Spring Security 5.x and 6.x, improving future-proofing.
- Changed `setAllowedOriginPatterns` to `setAllowedOrigins` since the allowed origin is a specific known origin and patterns are unnecessary here, improving clarity.
- Used `Collections.singletonList` instead of `Arrays.asList` for single element lists to reduce overhead.
- Made sure CORS configuration allows the origins explicitly for better control and security.
- Added line breaks in method chaining for improved readability.
- Added minimal Javadoc comments for class and methods to enhance maintainability.
- Formatted the code consistently (spacing, line breaks).
- Structured import statements in a cleaner way (alphabetical order, removing unused).
- Verified no syntax or typing errors present.